fix: 10663 , removes border flickering on disabled button (#15693)

--- a/packages/styles/scss/components/file-uploader/_file-uploader.scss
+++ b/packages/styles/scss/components/file-uploader/_file-uploader.scss
@@ -93,6 +93,7 @@
     color: $text-disabled;
     cursor: no-drop;
     text-decoration: none;
+    transition: none;
 
     &:hover,
     &:focus {
